--- a/app/views/reports/_demo.html.erb
+++ b/app/views/reports/_demo.html.erb
@@ -241,7 +241,7 @@
       },
       tooltip: {
         formatter: function () {
-          return '<span><b>' + this.point.id + '</b><br/><b>Value:</b><b>' + this.y + ' s</b><br/><b>Total Count:</b><b>' + "#" + '</b><span>';
+          return '<span><b>' + this.point.id + '</b><br/><b>Value:</b><b>' + this.y + ' s</b><span>';
         }
       },
       scrollbar: {
