--- a/app/views/reports/_daily-ftq.html.erb
+++ b/app/views/reports/_daily-ftq.html.erb
@@ -158,6 +158,7 @@
 
   $("#vehicle-select").change(function () {
     var productLine = $('#vehicle-select').val();
+    localStorage.box_msg="Line_"+productLine+"_interval_100"+"_box_0";
     loadChartData(productLine, 100);
   });
 
