--- a/app/views/reports/_my-reports.html.erb
+++ b/app/views/reports/_my-reports.html.erb
@@ -11,6 +11,8 @@
       <li><a menu="daily_ftq" href="#daily_ftq"><i class="icon-bar-chart mark"></i>
         CycleTime Detail<i class="icon-chevron-right indicate"></i></a></li>
 
+      <li><a menu="tv_cycle_time" href="#tv_cycle_time"><i class="icon-bar-chart mark"></i>
+        TV CycleTime<i class="icon-chevron-right indicate"></i></a></li>
 
       <!--<li><a menu="defects" href="#defects"><i class="icon-list mark"></i>
         History<i class="icon-chevron-right indicate"></i></a></li>-->
@@ -64,83 +66,6 @@
 <% end %>
 
 <script type="text/javascript">
-  //    $(document).ready(function () {
-  //        attach_upload("item-data-uploader");
-  //        $("body")
-  //                .on("click", ".attachment-item-remove", function (event) {
-  //                    if (confirm('Sure to delelte?')) {
-  //                        var e = event ? event : (window.event ? window.event : null);
-  //                        var obj = e.srcElement || e.target;
-  //                        e.stopPropagation();
-  //                        $(".attachment-item[path-name='" + $(obj).attr("path-name") + "']").remove();
-  //                    }
-  //                })
-  //                .on("click", "#create-discuss-btn", function () {
-  //                    show_project_block();
-  //                    if ($("#analytic-control-condition-visible").attr("state") == "open") {
-  //                        $("#analytic-control-condition-visible").click();
-  //                    }
-  //                })
-  //                .on("click", "#cancel-fro-project", function () {
-  //                    hide_project_block();
-  //                })
-  //                .on("click", "#share_to_discussion_btn", function () {
-  //                    $("#back-pop").addClass("show")
-  //                })
-  //                .on("click", "#remove-back-pop", function () {
-  //                    $("#back-pop").removeClass("show")
-  //                })
-  //                .on("click", "#add-to-storyset", function () {
-  //                    var story = prepare_for_create_report_story();
-  //                    if (story.story_set_id == null) {
-  //                        MessageBox('No Story Set,Please use select one or Use create and add button', 'top', 'warning');
-  //                        return;
-  //                    }
-  //                    MANAGE.story.create(story, function (data) {
-  //                        if (data.result) {
-  //                            window.location.href = "/story_sets/" + data.content.story_set_id + "/story";
-  //                        } else {
-  //                            MessageBox(data.content, 'top', 'warning');
-  //                        }
-  //
-  //                    });
-  //                })
-  //                .on("click", "#create-add-to-storyset", function () {
-  //                    var story = prepare_for_create_report_story();
-  //                    var story_set = {};
-  //                    story_set.title = $("#storyset-title").val();
-  //                    story_set.description = $("#storyset-desc").val();
-  //                    story_set.users = $("#storyset-users option:selected").map(function () {
-  //                        return $(this).attr("user")
-  //                    }).get();
-  //                    MANAGE.story_set.create(story_set, function (data) {
-  //                        if (data.result) {
-  //                            story.story_set_id = data.content.id;
-  //                            MANAGE.story.create(story, function (data) {
-  //                                if (data.result) {
-  //                                    window.location.href = "/story_sets/" + data.content.story_set_id + "/story";
-  //                                } else {
-  //                                    MessageBox(data.content, 'top', 'warning');
-  //                                }
-  //                            })
-  //                        }
-  //                        else {
-  //
-  //                        }
-  //                    })
-  //                })
-  //                .on("click", "#direct-publish-fro-project", function () {
-  //                    var story = prepare_for_create_report_story();
-  //                    story.story_set_id = $(this).attr("value");
-  //                    MANAGE.story.create(story, function (data) {
-  //                        if (data.result) {
-  //                            window.location.href = '/story_sets/' + data.content.id + '/story?story';
-  //                        } else {
-  //                            MessageBox(data.content, 'top', 'warning');
-  //                        }
-  //                    });
-  //                });
-  //    });
   var ClientHeight = document.documentElement.clientHeight;
 
   $('.my_icon').css({
@@ -217,6 +142,4 @@
     }
     return i;
   }
-
-
 </script>
